infinite.css
.CodeMirror, .CodeMirror, .CodeMirror-scroll  {
    background-color: #293134;
    color: #E0E2E4;
}

.CodeMirror .CodeMirror-lines pre {
    z-index: 3;
}

.CodeMirror .CodeMirror-gutters {
    background-color: #293134;
}

.CodeMirror .CodeMirror-linenumber {
    background-color: #293134;
    color: #81969A;
}

.CodeMirror .cm-atom {
    color: #40B4FF;
}

.CodeMirror .cm-qualifier {
    color: #FCEC88;
}

.CodeMirror .cm-builtin {
    color: #FCEC88;
}


/*Final qualifier like css id ex.: #context-menu-bar*/

.CodeMirror .cm-keyword {
    color: #95A5A6;
}

.CodeMirror .cm-meta {
    color: #40B4FF;
}


/*Meta elements like ex.: <!DOCTYPE html>*/

.CodeMirror .cm-comment {
    color: #95A5A6;
}

.CodeMirror .cm-string {
    color: #FCEC88;
}

.CodeMirror .cm-string-2 {
    color: #40B4FF;
}

.CodeMirror .cm-variable {
    color: #EEEEEE;
}

.CodeMirror .cm-variable-2 {
    color: #40B4FF;
}

.CodeMirror .cm-tag {
    color: #40B4FF;
}

.CodeMirror .cm-attribute {
    color: #95A5A6;
}

.CodeMirror .cm-property {
    color: #95A5A6;
}

.CodeMirror .cm-number {
    color: #40B4FF;
}

.CodeMirror .cm-def {
    color: #FF007F;
}


/*.CodeMirror .cm-meta { color: #EC7600; }*/

.CodeMirror .cm-error {
    color: #40B4FF;
}

.CodeMirror-foldmarker {
    padding-right: 5px;
    padding-left: 5px;
    background: #4d4d4d;
    border: 1px solid #ddd;
    margin-right: 3px;
    margin-left: 3px;
    border-radius: 3px;
    color: #fff;
    cursor: pointer;
}

.CodeMirror .CodeMirror-cursor {
    z-index: 5;
    border-left: 1px solid white;
}

#status-bar {
    border-top: 1px solid #484b4d;
    background: #3c3f41;
}

#status-bar #status-info {
    color: #f7c741;
}

#status-bar #status-indicators {
    background: #3c3f41;
}

#status-bar #status-indicators #status-language {
    color: #ed8d47;
}

#status-bar #status-indicators #status-indent {
    color: #4bd278;
}

#status-overwrite {
    color: #4BD278;
}
.cm-matchhighlight,
.CodeMirror-matchingtag,
.CodeMirror-searching,
.CodeMirror-matchingbracket,
.CodeMirror-searching,
.CodeMirror .CodeMirror-activeline,
.CodeMirror-matchingbracket,
.CodeMirror-matchingtag,
.CodeMirror-searching,
.CodeMirror .CodeMirror-linebackground,
.cm-matchhighlight.CodeMirror-searching.CodeMirror-selectedtext,
.CodeMirror .cm-matchhighlight:not(.CodeMirror-selectedtext)
{
    background: #fff !important;
    color: #FF4500  !important;
}

 .CodeMirror-searching.searching-current-match {
    background: #FF4500 !important;
     color: #FFF !important;
}

.CodeMirror-focused .CodeMirror-selected,
.CodeMirror .CodeMirror-selected,
.CodeMirror .CodeMirror-selectedtext {
    background: #545A5D;
}

